pkgs/artifacts-tui/tests/snapshots/command_tests__generate_wrong_missing_files_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generate_wrong/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generate_wrong/make_missing_files.json
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: false
exit_code: 1
----- stdout -----
[generate]
DEBUG:     files to produce -> 2 files
DEBUG:       - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
DEBUG:       - very-simple-secrets => /run/secrets/very-simple-secrets
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-test_artifact" machine="machine-name" artifact="test-artifact" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generate_wrong/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/test-artifact

----- stderr -----
ERROR: generator missing required files for artifact 'test-artifact': [very-simple-secrets]
