pkgs/artifacts-tui/tests/snapshots/command_tests__generator_missing_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_missing/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_missing/make.json
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: false
exit_code: 1
----- stdout -----
[generate]
DEBUG:     files to produce -> 2 files
DEBUG:       - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
DEBUG:       - very-simple-secrets => /run/secrets/very-simple-secrets
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-test-artifact" machine="machine-name" artifact="test-artifact" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_missing/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/test-artifact
>>> DESC: secret number 1
>>> PROMPT: secret1
> 
>>> DESC: secret number 2
>>> PROMPT: secret2
> 

----- stderr -----
/bin/sh: /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_missing/./not_there_test_generator.sh: No such file or directory
ERROR: running generator script: generator failed inside nix-shell with exit status: exit status: 127
