pkgs/artifacts-tui/tests/snapshots/command_tests__list_scenarios.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - list
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/bigger_setup
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/bigger_setup/backend.toml
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build: "/run/current-system/sw/bin/nix" "build" "--impure" "-I" "flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/bigger_setup" "--no-link" "--print-out-paths" "--expr" "\nlet\n  system = \"x86_64-linux\";\n  filterAttrs =\n    pred: set:\n    builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));\n  flake = builtins.getFlake (toString <flake>);\n  pkgs = flake.inputs.nixpkgs.legacyPackages.${system};\n  configurations = builtins.attrNames (\n    filterAttrs (\n      machine: configuration: builtins.hasAttr \"artifacts\" configuration.options\n    ) flake.nixosConfigurations\n  );\n  make = map (name: {\n    machine = name;\n    artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.nixosConfigurations.${name}.config.artifacts) then\n        flake.nixosConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) configurations;\nin\npkgs.writeText \"test.json\" (builtins.toJSON make)\n"
DEBUG: make config: [{"artifacts":{"artifact-one":{"files":{"first-secret":{"group":"root","mode":"0400","name":"first-secret","owner":"root","path":"/run/secrets/first-secret"}},"generator":"/nix/store/y3nn4hywc8n4ymlzi5h7l2qysk5icl3v-test_generator_one.sh","name":"artifact-one","prompts":{},"serialization":"test","shared":false},"artifact-two":{"files":{"second-secret":{"group":"root","mode":"0400","name":"second-secret","owner":"root","path":"/run/secrets/second-secret"}},"generator":"/nix/store/dvr437j28bzg11ymlj0kfcpifazkj3s7-test_generator_two.sh","name":"artifact-two","prompts":{},"serialization":"test","shared":false}},"config":{},"machine":"machine-one"},{"artifacts":{"artifact-one":{"files":{"first-secret":{"group":"root","mode":"0400","name":"first-secret","owner":"root","path":"/run/secrets/first-secret"}},"generator":"/nix/store/y3nn4hywc8n4ymlzi5h7l2qysk5icl3v-test_generator_one.sh","name":"artifact-one","prompts":{},"serialization":"test","shared":false},"artifact-two":{"files":{"second-secret":{"group":"root","mode":"0400","name":"second-secret","owner":"root","path":"/run/secrets/second-secret"}},"generator":"/nix/store/dvr437j28bzg11ymlj0kfcpifazkj3s7-test_generator_two.sh","name":"artifact-two","prompts":{},"serialization":"test","shared":false}},"config":{},"machine":"machine-two"}]
[list]
machine: machine-one
artifact: artifact-one
artifact: artifact-two
[list]
machine: machine-two
artifact: artifact-one
artifact: artifact-two

----- stderr -----
