pkgs/artifacts-tui/tests/snapshots/command_tests__missing_generator_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/missing_generator/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/missing_generator/make.json
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: ""
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
ERROR: parsing make config /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/missing_generator/make.json: missing field `generator` at line 14 column 7
