pkgs/artifacts-tui/tests/snapshots/command_tests__regenerate_machine_scenarios.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - "--log-level=debug"
    - regenerate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/bigger_setup/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/bigger_setup/make.json
    - "--machine=machine-one"
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret
⚡ machine-one/artifact-one
💾 serialize secrets
=== Content of /tmp/artifacts-tui-ci/out-artifact-one/first-secret ===
one
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret
⚡ machine-one/artifact-two
💾 serialize secrets
=== Content of /tmp/artifacts-tui-ci/out-artifact-two/second-secret ===
two
=========================
✅ machine-two/artifact-one
✅ machine-two/artifact-two

----- stderr -----
