pkgs/artifacts-tui/tests/snapshots/command_tests__scenario_generator_help.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - generate
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Generate artifacts

Usage: artifacts generate [OPTIONS] <BACKEND> <MAKE>

Arguments:
  <BACKEND>  Path to backend configuration file (backend.toml)
  <MAKE>     Path to make configuration file (make.json)

Options:
      --all                  Regenerate all artifacts from all machines (conflicts with --machine/--artifact)
      --machine <MACHINE>    Name of machine(s) to target (repeatable)
      --artifact <ARTIFACT>  Name of artifact(s) to target (repeatable)
  -h, --help                 Print help

----- stderr -----
